--- a/prereq/scss/_header.scss
+++ b/prereq/scss/_header.scss
@@ -18,8 +18,12 @@ header {
 
 .hd-logo{
     font-size: 3.8rem;
+    letter-spacing: 3.8px;
     @include tab {
         font-size: 2.2rem;
+    }
+    @include sp {
+        letter-spacing: 2.2px;
     }
 }
 
@@ -36,6 +40,7 @@ nav {
         li {
             color: $gray;
             margin-left: 20px;
+            letter-spacing: 1.8px;
         }
         a:hover {
             color: black;
@@ -62,13 +67,16 @@ nav {
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-top: 150px;
+            margin-top: 100px;
             line-height: 8;
             z-index: 1;
         }
         .under-line {
             line-height: 1.5;
         }
+    }
+    @include sp {
+        top: 70px;
     }
 }
 
