--- a/prereq/scss/_menu.scss
+++ b/prereq/scss/_menu.scss
@@ -36,12 +36,21 @@
     }
     .menu-1-img {
         background-image: url(../img/jens-lindner-4i7-mcM7xSY-unsplash.png);
-    }
+        @include sp {
+            background-image: url(../img/jens-lindner-4i7-mcM7xSY-unsplash@2x_sp.png);
+        }
+        }
     .menu-2-img {
         background-image: url(../img/beautiful-beauty-female-247322.png);
+        @include sp {
+            background-image: url(../img/beautiful-beauty-female-247322@2x_sp.png);
+        }
     }
     .menu-3-img {
         background-image: url(../img/edgar-perez-kTBJmeRbAbo-unsplash.png);
+        @include sp {
+            background-image: url(../img/edgar-perez-kTBJmeRbAbo-unsplash@2x_sp.png);
+        }
     }
     &-img {
         width: 271px;
@@ -50,6 +59,7 @@
         opacity: 0;
         @include sp {
             width: 100%;
+            background-position-x: center;
         }
     }
      .show {
@@ -82,6 +92,7 @@
     &-text {
         margin: 34px auto;
         width: 90%;
+        letter-spacing: 1.6px;
         @include tab {
             margin: 30px 0;
             width: 100%;
