--- a/prereq/scss/_first-view.scss
+++ b/prereq/scss/_first-view.scss
@@ -47,6 +47,7 @@
     @include sp {
         background-image: url(../img/Blond\ woman\ with\ long\ curly\ beautiful\ hair@2x_sp.png);
         background-position-x: center;
+        height: 90vh;
     }
 }
 
