--- a/prereq/scss/_header.scss
+++ b/prereq/scss/_header.scss
@@ -77,6 +77,10 @@ nav {
     }
     @include sp {
         top: 70px;
+        height: 90vh;
+        ul {
+            line-height: 7;
+        }
     }
 }
 
