--- a/prereq/css/main.css
+++ b/prereq/css/main.css
@@ -438,6 +438,11 @@ nav ul a:hover {
   letter-spacing: 3.8px;
   line-height: 3;
 }
+@media screen and (max-width: 959px) {
+  .catch-copy2 {
+    margin-top: 10px;
+  }
+}
 @media screen and (max-width: 600px) {
   .catch-copy2 {
     font-size: 2.8rem;
